// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchReducer reducer should APPLY_SELECTED_FACETS 1`] = `
Object {
  "categorySearches": Object {
    "1234": Object {
      "facets": Array [],
    },
  },
}
`;

exports[`searchReducer reducer should CLEAR_FACETS 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": false,
  "keywordSearches": Object {
    "undefined": Object {
      "numSelectedFacets": 0,
      "selectedFacetResponses": Array [],
      "selectedFacets": Object {},
    },
  },
  "nullSearchResult": false,
  "typeAheadResults": Object {},
  "viewStyle": "SEARCH_LIST",
}
`;

exports[`searchReducer reducer should CYCLE_VIEW_STYLE 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": false,
  "keywordSearches": Object {},
  "nullSearchResult": false,
  "typeAheadResults": Object {},
  "viewStyle": "SEARCH_GRID",
}
`;

exports[`searchReducer reducer should SEARCH_GALLERY 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": false,
  "keywordSearches": Object {},
  "nullSearchResult": false,
  "typeAheadResults": Object {},
  "viewStyle": "SEARCH_LIST",
}
`;

exports[`searchReducer reducer should SEARCH_GRID 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": false,
  "keywordSearches": Object {},
  "nullSearchResult": false,
  "typeAheadResults": Object {},
  "viewStyle": "SEARCH_LIST",
}
`;

exports[`searchReducer reducer should SEARCH_LIST 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": false,
  "keywordSearches": Object {},
  "nullSearchResult": false,
  "typeAheadResults": Object {},
  "viewStyle": "SEARCH_LIST",
}
`;

exports[`searchReducer reducer should SEARCH_SUCCESS 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": false,
  "keywordSearches": Object {},
  "nullSearchResult": false,
  "typeAheadResults": Object {},
  "viewStyle": "SEARCH_LIST",
}
`;

exports[`searchReducer reducer should SEARCH_SUCCESS_ONLY_FACETS 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": false,
  "keywordSearches": Object {
    "undefined": Object {
      "facets": undefined,
      "numFound": undefined,
      "selectedFacetResponses": undefined,
    },
  },
  "nullSearchResult": false,
  "typeAheadResults": Object {},
  "viewStyle": "SEARCH_LIST",
}
`;

exports[`searchReducer reducer should SET_NULL_SEARCH_RESULT 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": false,
  "keywordSearches": Object {},
  "nullSearchResult": true,
  "typeAheadResults": Object {},
  "viewStyle": "SEARCH_LIST",
}
`;

exports[`searchReducer reducer should SET_SORT_OPTION for a category search 1`] = `
Object {
  "categorySearches": Object {
    "1234": Object {
      "sortOption": undefined,
    },
  },
}
`;

exports[`searchReducer reducer should SET_SORT_OPTION for a keyword search 1`] = `
Object {
  "keywordSearches": Object {
    "keyword": Object {
      "sortOption": undefined,
    },
  },
}
`;

exports[`searchReducer reducer should START_LOADING 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": true,
  "keywordSearches": Object {},
  "nullSearchResult": false,
  "typeAheadResults": Object {},
  "viewStyle": "SEARCH_LIST",
}
`;

exports[`searchReducer reducer should TYPEAHEAD 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": false,
  "keywordSearches": Object {},
  "nullSearchResult": false,
  "typeAheadResults": Object {
    "undefined": undefined,
  },
  "viewStyle": "SEARCH_LIST",
}
`;

exports[`searchReducer reducer should UPDATE_SELECTED_FACETS 1`] = `
Object {
  "categorySearches": Object {
    "1234": Object {
      "facets": Array [],
      "numSelectedFacets": 0,
      "selectedFacets": Object {
        "undefined": Object {
          "excluded": Array [],
          "selected": Array [],
        },
      },
    },
  },
}
`;

exports[`searchReducer reducer should VIEW_STYLE_LOADED 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": false,
  "keywordSearches": Object {},
  "nullSearchResult": false,
  "typeAheadResults": Object {},
  "viewStyle": undefined,
}
`;

exports[`searchReducer reducer should return initialState 1`] = `
Object {
  "categorySearches": Object {},
  "isLoading": false,
  "keywordSearches": Object {},
  "nullSearchResult": false,
  "typeAheadResults": Object {},
  "viewStyle": "SEARCH_LIST",
}
`;
